
if FOUNDATION

if PL_LOCAL
SUBDIRS = src app-extra docs www studios
else 
SUBDIRS = src app-extra docs www
endif

else !FOUNDATION

SUBDIRS = src

endif !FOUNDATION



EXTRA_DIST = \
  autogen.sh \
  config/bootstrap.sh \
  config/config.guess \
  config/config.sub \
  config/depcomp \
  config/install-sh \
  config/missing \
  config/mkinstalldirs

